change default port and log file name

--- a/lapa_file_store/data/config.ini
+++ b/lapa_file_store/data/config.ini
@@ -1,6 +1,6 @@
 [ENVIRONMENT]
 HOST_IP = localhost
-HOST_PORT = 10010
+HOST_PORT = 10100
 
-LOCAL_STORAGE_PATH = D:\Workarea\paths\oss
-LOG_FILE_NAME = lapa_database
+LOCAL_STORAGE_PATH = LOCAL_STORAGE_PATH
+LOG_FILE_NAME = lapa_file_store
