- bug fix in utils->Helper.py import.

--- a/lapa_file_store/data/config.ini
+++ b/lapa_file_store/data/config.ini
@@ -2,7 +2,7 @@
 MODULE_NAME = lapa_file_store
 
 [ENVIRONMENT]
-HOST_IP = localhost
+HOST_IP = 0.0.0.0
 HOST_PORT = 10100
 
 LOCAL_STORAGE_PATH = LOCAL_STORAGE_PATH
