:sparkles: https support

--- a/lapa_file_store/data/config.ini
+++ b/lapa_file_store/data/config.ini
@@ -8,6 +8,10 @@ HOST_PORT = 10100
 LOCAL_STORAGE_PATH = LOCAL_STORAGE_PATH
 LOG_FILE_NAME = lapa_file_store
 
+# absolute path (mandatory only for http)
+SSL_CRT_FILE_PATH = ssl.crt
+SSL_KEY_FILE_PATH = ssl.key
+
 [SQUARE_LOGGER]
 
 # | Log Level | Value |
